@@ -26,6 +26,7 @@
 #ifndef UNICODE
 #include <mbctype.h>
 #endif
+#include "Constants.h"
 #include "version.h"
 #include "dllver.h"
 #include "DiffWrapper.h"
@@ -383,10 +384,9 @@ bool CConfigLog::DoFile(bool writing, CString &sError)
 
 	if (writing)
 	{
-		m_sFileName = _T("WinMerge.txt");
-
-		// Get path to $temp/WinMerge.txt
-		m_sFileName.Insert(0, env_GetTempPath());
+		String sFileName = paths_ConcatPath(env_GetMyDocuments(NULL), WinMergeDocumentsFolder);
+		sFileName = paths_ConcatPath(sFileName, _T("WinMerge.txt"));
+		m_sFileName = sFileName.c_str();
 
 		if (!m_file.Open(m_sFileName, CFile::modeCreate | CFile::modeWrite))
 		{
