@@ -5,6 +5,7 @@ http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.12.4
   Add more C/C++ types to syntax highlight (#2776705)
+  Create config log file to My Documents-folder (#2789839)
   Bugfix: Reports had same left/right descriptions (#2772646)
   Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
   Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
